# JQL-Annotation-Pipeline

./: pyproject.toml
src/jql_annotation_pipeline/: jql_direct.py
